--- a/styles/style.css
+++ b/styles/style.css
@@ -14,11 +14,42 @@ body {
     grid-template-columns: 1fr 600px;
 }
 
+/* First Hero */
+
+.first__hero {
+    padding: 60px;
+    background-image: url("../images/desktop-image-hero-1.jpg");
+    background-repeat: no-repeat;
+    
+}
+
+.first__nav {
+    display: flex;
+    align-items: center;
+}
+
+.first__list {
+    margin-left: 40px;
+    display: inline-flex;
+}
+
+.first__item {
+    margin-right: 30px;
+}
+
+.first__link {
+    text-decoration: none;
+    color: hsl(0, 0%, 100%);
+}
+
+/* First Info */
+
 .first__info {
-    padding: 100px 60px;
+    padding: 100px 20px;
 }
 
 .first__title {
+    max-width: 500px;
     font-size: 40px;
     font-weight: 700;
     
