--- a/styles/style.css
+++ b/styles/style.css
@@ -89,3 +89,19 @@ body {
     background-color: hsl(0, 0%, 0%);
     border: 0;
 }
+
+/* Second */
+
+.second {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+}
+
+.second__hero {
+    max-width: 400px;
+}
+
+.second__image {
+    width: 100%;
+    height: auto;
+}
