--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,7 @@ body {
 
 .first__info {
     position: relative;
-    padding: 115px 0 115px 100px;
+    padding: 120px 0 120px 100px;
 }
 
 .first__title {
@@ -159,5 +159,28 @@ body {
         top: -70px;
         right: 0;
         left: auto;
+    }
+
+    /* Second */
+
+    .second {
+        grid-template-columns: 1fr;
+    }
+
+    .second__hero {
+        max-width: none;
+    }
+
+    .second__info {
+        padding: 100px;
+    }
+
+    .second__title {
+        font-size: 32px;
+    }
+
+    .second__desc {
+        max-width: 800px;
+        font-size: 16px;
     }
 }
