--- a/styles/style.css
+++ b/styles/style.css
@@ -184,3 +184,24 @@ body {
         font-size: 16px;
     }
 }
+
+@media only screen and (max-width: 750px) {
+    /* First */
+
+    .first__link {
+        font-size: 14px;
+    }
+
+    .first__info {
+        padding: 60px;
+    }
+
+    .first__title {
+        font-size: 38px;
+    }
+
+    .first__desc {
+        font-size: 14px;
+    }
+
+}
