--- a/styles/style.css
+++ b/styles/style.css
@@ -204,4 +204,18 @@ body {
         font-size: 14px;
     }
 
+    /* Second */
+
+    .second__info {
+        padding: 60px;
+    }
+
+    .second__title {
+        font-size: 20px;
+    }
+
+    .second__desc {
+        font-size: 14px;
+    }
+
 }
